# device-client

./: CONTRIBUTING.md  README.md  SECURITY.md
client/: CMakeLists.txt
client/deviceclient/: CMakeLists.txt
client/deviceclient/src/: CProductImplController.cpp  CProductImplController.h  DeviceClientAppVersion.h  main.cpp
client/deviceclient/unittest/: TestCProductImplController.cpp
client/googletest/: CMakeLists.txt
client/googletest/googletest/: CMakeLists.txt
client/libAuto/: CMakeLists.txt
client/libAuto/include/: AutoLibVersion.h
client/libAuto/src/analytics/: CAnalyticsMessageHandler.cpp  CAnalyticsMessageHandler.h  CRemoteService.cpp  CRemoteService.h
client/libAuto/unittest/: TestCRemoteService.cpp
client/libClientBL/: CMakeLists.txt
client/libClientBL/include/: ClientBLLibVersion.h  IExtendedClientConnector.h
client/libClientBL/src/analytics/: CDeviceActivationHandler.cpp  CDeviceActivationHandler.h  CDisassociationRequestHandler.cpp  CDisassociationRequestHandler.h  CInternalMessageHandler.cpp  CInternalMessageHandler.h  CVinHandler.cpp  CVinHandler.h
client/libClientBL/src/auth/: CActivationBackoff.cpp  CActivationBackoff.h  CActivationState.cpp  CActivationState.h  CTokenManager.cpp  CTokenManager.h
client/libClientBL/src/config/: CConfigRequestHandler.cpp  CConfigRequestHandler.h
client/libClientBL/src/core/: CClientConn.cpp  CClientConnectorImpl.cpp  CClientConnectorImpl.h  CClientOnOff.cpp  CClientOnOff.h  CEventIntervalValidator.cpp  CEventIntervalValidator.h  CIgniteClient.cpp  CPersistancyAndStateHandler.cpp  CPersistancyAndStateHandler.h
client/libClientBL/src/dam/: CActivityDelay.cpp  CActivityDelay.h  CCacheTransport.cpp  CCacheTransport.h  CDBTransport.cpp  CDBTransport.h  CDBTransportWrapper.cpp  CDBTransportWrapper.h  CEventReceiver.cpp  CEventReceiver.h  CEventTimestampValidationHandler.cpp  CEventTimestampValidationHandler.h  CInitialEvents.cpp  CInitialEvents.h  CInsightEngine.cpp  CInsightEngine.h  CMessageController.cpp  CMessageController.h  CPeriodicEvents.cpp  CPeriodicEvents.h  CSessionStatusHandler.cpp  CSessionStatusHandler.h  CTransportHandlerBase.cpp  CTransportHandlerBase.h
client/libClientBL/src/db/: CGranularityReductionHandler.cpp  CGranularityReductionHandler.h  CInvalidTimestampEventStore.cpp  CInvalidTimestampEventStore.h
client/libClientBL/src/net/: CExponentialBackoff.cpp  CExponentialBackoff.h  CIgniteMQTTClient.cpp  CIgniteMQTTClient.h  IConnNotification.h
client/libClientBL/src/notif/: CMQTTNotificationHandler.cpp  CMQTTNotificationHandler.h  CNotificationListener.cpp  CNotificationListener.h
client/libClientBL/src/upload/: CMQTTUploader.cpp  CMQTTUploader.h  CMidHandler.cpp  CMidHandler.h  CUploadController.cpp  (+2 more)
client/libClientBL/unittest/: TestCActivationState.cpp  TestCActivityDelay.cpp  TestCCacheTransport.cpp  TestCClientConnectorImpl.cpp  TestCClientOnOff.cpp  TestCDBTransport.cpp  TestCEventIntervalValidator.cpp  TestCEventReceiver.cpp  TestCExponentialBackoff.cpp  TestCGranularityReductionHandler.cpp  TestCIgniteMQTTClient.cpp  TestCInsightEngine.cpp  TestCInternalMessageHandler.cpp  TestCInvalidTimestampEventStore.cpp  TestCMQTTNotificationHandler.cpp  TestCMQTTUploader.cpp  TestCMidHandler.cpp  TestCPersistancyAndStateHandler.cpp  TestCSessionStatusHandler.cpp  TestCUploadController.cpp  TestCVinHandler.cpp
client/libCore/: CMakeLists.txt
client/libCore/include/: CClientConn.h  CDeviceDetails.h  CExternalAppMsgTypes.h  CIgniteClient.h  CIgniteConfig.h  CMessageQueue.h  CoreLibVersion.h  IClientConnector.h  IClientMessageDispatcher.h  IMessageHandler.h  IOnOff.h  IOnOffNotificationReceiver.h  IProduct.h
client/libCore/unittest/: TestCAes.cpp  TestCAesGcm.cpp  TestCBaseMessageHandler.cpp  TestCContentValues.cpp  TestCDataBaseFacade.cpp  TestCEventWrapper.cpp  TestCIgniteConfig.cpp  TestCIgniteDataSecurity.cpp  TestCLocalConfigStore.cpp  TestCServiceSettingsStore.cpp  TestCSigThread.cpp  TestCSqlException.cpp  TestCUploadMode.cpp
client/libDevice/: CMakeLists.txt
client/libDevice/include/: DeviceLibVersion.h  IDeviceCommandHandler.h  IDeviceMessageSender.h
client/libDevice/src/: CClientMessageDispatcherImpl.cpp  CClientMessageDispatcherImpl.h  CCpuLoad.cpp  CCpuLoad.h  CDefaultDeviceMessageSenderImpl.h  CDefaultProductImpl.cpp  CDefaultProductImpl.h  CDeviceCommandHandlerImpl.cpp  CDeviceCommandHandlerImpl.h  CDeviceInfo.cpp  CDeviceInfo.h  CZMQClient.cpp  CZMQClient.h  CZMQDeviceMessageSenderImpl.cpp  CZMQDeviceMessageSenderImpl.h  CZMQReceiveMessage.cpp  CZMQReceiveMessage.h
client/libDevice/unittest/: TestCClientMessageDispatcherImpl.cpp  TestCDeviceCommandHandlerImpl.cpp  TestCDeviceinfo.cpp  TestCZMQDeviceMessageSenderImpl.cpp
client/libEvent/: CMakeLists.txt
client/libEvent/include/: CClientInfo.h  CCrc32.h  CIgniteEvent.h  CIgniteEventCWrapper.h  CIgniteEventSender.h  CIgniteMessage.h  CMessageTypes.h  EventLibVersion.h
client/libEvent/src/: CCrc32.cpp  CIgniteEvent.cpp  CIgniteEventCWrapper.cpp  CIgniteEventSender.cpp  CIgniteMessage.cpp
client/libEvent/unittest/: TestCCrc32.cpp  TestCIgniteEvent.cpp  TestCIgniteEventCWrapper.cpp  TestCIgniteEventSender.cpp
client/libNetwork/: CMakeLists.txt
client/libNetwork/include/: CIgniteHTTPConnector.h  CSSLAttributes.h  IExternalHttpSessionHandler.h  NetworkLibVersion.h
client/libNetwork/unittest/: TestCHttpRequest.cpp  TestCHttpResponse.cpp  TestCHttpSessionManager.cpp  TestCIgniteAuthTokenAPI.cpp  TestCIgniteHTTPConnector.cpp
client/libUtils/: CMakeLists.txt
client/libUtils/include/: CConcurrentQueue.h  CIgniteDateTime.h  CIgniteFileUtils.h  CIgniteGZip.h  CIgniteLog.h  CIgniteMutex.h  CIgniteStringUtils.h  CIgniteThread.h  CPreIgniteLogger.h  UtilsLibVersion.h
client/libUtils/src/: CIgniteDateTime.cpp  CIgniteFileUtils.cpp  CIgniteGZip.cpp  CIgniteLog.cpp  CIgniteMutex.cpp  CIgniteThread.cpp  jsoncpp.cpp
client/libUtils/unittest/: TestCIgniteDateTime.cpp  TestCIgniteFileUtils.cpp  TestCIgniteLog.cpp
client/libmosquitto/: CMakeLists.txt
client/libmosquitto/include/: mosquitto.h  mosquittopp.h
(+85 files in other folders)
